@@ -276,6 +276,8 @@ struct sdparm_vpd_page_t sdparm_vpd_pg[] = {
     {VPD_SUPPORTED_VPDS, 0, -1, "sv", "Supported VPD pages"},
     {VPD_TA_SUPPORTED, 0, PDT_TAPE, "tas", "TapeAlert supported flags (SSC)"},
     {VPD_3PARTY_COPY, 0, -1, "tpc", "Third party copy (SPC + SBC)"},
+    {VPD_ZBC_DEV_CHARS, 0, -1, "zbdc", "Zoned block device characteristics "
+     "(SBC + ZBC)"},
     {0, 0, 0, NULL, NULL},
 };
 
@@ -1496,7 +1498,7 @@ static struct sdparm_mode_page_item sdparm_mitem_sas_arr[] = {
     {"PHID", PROT_SPEC_PORT_MP, MSP_SAS_PCD, -1, 9, 7, 8, 0,
         "Phy identifier", NULL},
     {"ADT", PROT_SPEC_PORT_MP, MSP_SAS_PCD, -1, 12, 6, 3, 0,
-        "Attached SAS device type",	/* the word SAS added in spl4r01 */
+        "Attached SAS device type",    /* the word SAS added in spl4r01 */
         "0: no device attached; 1: end device\t"
         "2: expander device; " /* in SAS-1.1 this was a "edge expander" */
         "3: expander device (fanout, SAS-1.1)"}, /* obsolete in SAS-2 */
